@@ -16,6 +16,9 @@ In 0.10:
        - session management for unamanged windows modified. Since this
          is a KDE special for applications like kfm, other programms
          make trouble (for example Netscape 4) (Needs current libkdecore!)
+       - session management fix (Netscape 3 et. al.)
+       - placement: transient windows always on the desktop of their parent
+       - desktop placement fixed for withdraw-by-client windows
   patchlevel 10:
        - internal changes to module registration. (Needs the newest
          libkdecore to work)
